--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "homepage": "https://henrymeager.github.io/react-portfolio/",
   "type": "module",
